Added insertNewBankAndAdmin(), insertNewBankAdmin(), and modifyBank(). ALSO fix the fact that the Facade should not show EmailAlreadyInUseException as being thrown by modifyBank(), and ALSO fix a random deprecated feature of Integer in EventController.